--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   },
   "peerDependencies": {
     "react-native": "^0.46.0 || ^0.47.0 || ^0.48.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.18.2"
   }
 }
