--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "author": "Kumulos Ltd. <support@kumulos.com>",
   "license": "MIT",
   "dependencies": {
-    "base-64": "^0.1.0",
-    "react-native-device-info": "^0.11.0"
+    "base-64": "^0.1.0"
   },
   "peerDependencies": {
     "react-native": "^0.46.0 || ^0.47.0 || ^0.48.0"
