--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   },
   "devDependencies": {
     "eslint": "^4.18.2"
+  },
+  "rnpm": {
+    "android": {
+      "sourceDir": "./src/android"
+    }
   }
 }
