--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:3.1.3'
     }
 }
 
@@ -17,7 +17,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         minSdkVersion 16
@@ -29,16 +29,6 @@ android {
         abortOnError false
     }
 
-    packagingOptions {
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/ASL2.0'
-        exclude 'META-INF/LICENSE'
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
 }
 
 repositories {
@@ -48,6 +38,6 @@ repositories {
 dependencies {
     compile 'com.facebook.react:react-native:+'
 
-    debugCompile 'com.kumulos.android:kumulos-android-debug:4.0.4'
-    releaseCompile 'com.kumulos.android:kumulos-android-release:4.0.4'
+    debugImplementation 'com.kumulos.android:kumulos-android-debug:4.0.4'
+    releaseImplementation 'com.kumulos.android:kumulos-android-release:4.0.4'
 }
