--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "author": "Kumulos Ltd. <support@kumulos.com>",
   "license": "MIT",
   "dependencies": {
-    "base-64": "^0.1.0"
+    "base-64": "^0.1.0",
+    "raven-js": "^3.26.3"
   },
   "peerDependencies": {
     "react-native": "^0.46.0 || ^0.47.0 || ^0.48.0"
