--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "description": "Official SDK for integrating Kumulos services with your React Native projects",
   "main": "src/index.js",
-  "types": "src/kumulos.d.ts",
+  "types": "index.d.ts",
   "repository": "https://github.com/Kumulos/KumulosSdkReactNative",
   "author": "Kumulos Ltd. <support@kumulos.com>",
   "license": "MIT",
