--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -21,7 +21,7 @@ android {
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -38,6 +38,6 @@ repositories {
 dependencies {
     compile 'com.facebook.react:react-native:+'
 
-    debugImplementation 'com.kumulos.android:kumulos-android-debug:4.0.4'
-    releaseImplementation 'com.kumulos.android:kumulos-android-release:4.0.4'
+    debugImplementation 'com.kumulos.android:kumulos-android-debug:4.1.0-gcm-11.8.0'
+    releaseImplementation 'com.kumulos.android:kumulos-android-release:4.1.0-gcm-11.8.0'
 }
