Replace deprecated compile directive in android build.gradle

--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -36,7 +36,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
+    compileOnly 'com.facebook.react:react-native:+'
 
     debugImplementation 'com.kumulos.android:kumulos-android-debug:6.0.0'
     releaseImplementation 'com.kumulos.android:kumulos-android-release:6.0.0'
