User association helpers and dependency updates (#8)
* Update Android SDK to 5.1.1

* Add package lock

* Update iOS SDK to 1.7.0

* Add helpers for getting & clearing current user association

* Add new methods to type definitions

* Bump version & update README instructions

* Update to Android SDK version 6.0.0

* Replace deprecated compile directive in android build.gradle

* Remove buildToolsVersion as no longer required with newer android gradle plugin

--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -17,7 +17,6 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "23.0.3"
 
     defaultConfig {
         minSdkVersion 16
@@ -36,8 +35,8 @@ repositories {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
+    compileOnly 'com.facebook.react:react-native:+'
 
-    debugImplementation 'com.kumulos.android:kumulos-android-debug:4.0.4'
-    releaseImplementation 'com.kumulos.android:kumulos-android-release:4.0.4'
+    debugImplementation 'com.kumulos.android:kumulos-android-debug:6.0.0'
+    releaseImplementation 'com.kumulos.android:kumulos-android-release:6.0.0'
 }
