--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kumulos-react-native",
-  "version": "2.1.0",
+  "version": "2.1.0-shoutem",
   "description": "Official SDK for integrating Kumulos services with your React Native projects",
   "main": "src/index.js",
   "types": "index.d.ts",
