Exclude dependencies which have version conflicts
RN 0.59 updates dependencies on the support library to v28, and bumps okhttp to v3.12.x, which casues dependency conflicts.

With this, we exclude the dependencies from the base Kumulos SDK to allow using the versions included by RN 0.59.

--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -36,6 +36,16 @@ repositories {
 dependencies {
     compileOnly 'com.facebook.react:react-native:+'
 
-    debugImplementation 'com.kumulos.android:kumulos-android-debug:6.0.0'
-    releaseImplementation 'com.kumulos.android:kumulos-android-release:6.0.0'
+    debugImplementation ('com.kumulos.android:kumulos-android-debug:6.1.0') {
+        exclude group: 'com.squareup.okhttp3'
+        exclude module: 'okhttp3'
+        exclude group: 'com.android.support'
+        exclude module: 'support-annotation'
+    }
+    releaseImplementation ('com.kumulos.android:kumulos-android-release:6.1.0') {
+        exclude group: 'com.squareup.okhttp3'
+        exclude module: 'okhttp3'
+        exclude group: 'com.android.support'
+        exclude module: 'support-annotation'
+    }
 }
