add button clicked action to manifest, launch activity when clicked

--- a/src/android/src/main/AndroidManifest.xml
+++ b/src/android/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
             <intent-filter>
                 <action android:name="com.kumulos.push.RECEIVED" />
                 <action android:name="com.kumulos.push.OPENED" />
+                <action android:name="com.kumulos.push.BUTTON_CLICKED" />
             </intent-filter>
         </receiver>
     </application>
