Depend on Android 6.1.0-shoutem1

--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -39,13 +39,13 @@ repositories {
 dependencies {
     implementation 'com.facebook.react:react-native:+'
 
-    debugImplementation ('com.kumulos.android:kumulos-android-debug:6.1.0-shoutem') {
+    debugImplementation ('com.kumulos.android:kumulos-android-debug:6.1.0-shoutem1') {
         exclude group: 'com.squareup.okhttp3'
         exclude module: 'okhttp3'
         exclude group: 'com.android.support'
         exclude module: 'support-annotation'
     }
-    releaseImplementation ('com.kumulos.android:kumulos-android-release:6.1.0-shoutem') {
+    releaseImplementation ('com.kumulos.android:kumulos-android-release:6.1.0-shoutem1') {
         exclude group: 'com.squareup.okhttp3'
         exclude module: 'okhttp3'
         exclude group: 'com.android.support'
