--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -2,6 +2,16 @@ def safeExtGet(prop, fallback) {
     rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
 }
 
+allprojects {
+    repositories {
+        maven {
+            // All of React Native (JS, Android binaries) is installed from npm
+            url "$rootDir/../node_modules/react-native/android"
+        }
+    }
+}
+
+
 buildscript {
     repositories {
         jcenter()
@@ -35,6 +45,7 @@ android {
 repositories {
     mavenCentral()
 }
+
 
 dependencies {
     implementation 'com.facebook.react:react-native:+'
