--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -14,7 +14,7 @@ allprojects {
 
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
